# monopoly_game_arena

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  PROFESSIONALIZATION_PLAN.md  README.md  __init__.py  alembic.ini  analyze_game.py  docker-compose.yml  editorconfig  env.example  game_logger.py  mkdocs.yml  play_monopoly.py  pyproject.toml  snapshot.py  test_database.py  test_llm_database.py
agents/: __init__.py  base.py  greedy.py  llm.py  random.py
alembic/: env.py
alembic/versions/: 20251214_1426-29654331bd83_first.py  20251216_1716-1bfdc6e41610_pr.py
analyzer/: game_analyzer.py  report_generator.py
dashboard/: app.py  config.py
dashboard/assets/: custom.css
dashboard/components/: kpi_cards.py
dashboard/data/: __init__.py  queries.py
dashboard/pages/: game_detail.py  live.py  llm_ranking.py  overview.py  strategy_analysis.py
dashboard/utils/: formatting.py  storytelling.py
docs/: index.md  quickstart.md
docs/agents/: base.md  greedy.md  index.md  llm.md  random.md
docs/monopoly/: auction.md  board.md  cards.md  config.md  game.md  index.md  money.md  player.md  rules.md  rules_api.md  spaces.md  trading.md
docs/server/: api.md  index.md  registry.md  runner.md  (+1 more)
events/: __init__.py  mapper.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
monopoly/: __init__.py  auction.py  board.py  cards.py  config.py  game.py  money.py  player.py  rules.py  spaces.py  trade.py  trading.py
scripts/: batch_games.py  db_manager.py  play_monopoly.py
server/: __init__.py  app.py  dashboard_api.py  registry.py  runner.py  schemas.py
src/: __init__.py  settings.py
templates/: aggressive.txt  balanced.txt  defensive.txt  system_prompt.txt
tests/: __init__.py  conftest.py  test_auction.py  test_building.py  test_cards.py  test_economy.py  test_event_mapper.py  test_jail.py  test_mortgage_bankruptcy.py  test_rent.py  test_server.py  test_snapshot.py  test_trade.py  test_turn_flow.py
(+111 files in other folders)
