[project]
name = "monopolyv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.6.0",
    # Database dependencies
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.25.0",
    "vllm>=0.11.2",
]
